# gomuot-windows

./: AGENTS.md  LICENSE  README.md
.github/workflows/: windows-preview.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/engine/: shortcut.rs
core/tests/: auto_capitalize_test.rs  bug_reports_test.rs  disabled_shortcut_test.rs  dynamic_test.rs  engine_test.rs  english_100k_test.rs  english_auto_restore_toggle_test.rs  english_telex_patterns_test.rs  english_words_test.rs  foreign_consonants_test.rs  integration_test.rs  paragraph_test.rs  test_lissa_larra.rs  typing_order_consistency_test.rs  typing_order_permutation_test.rs  vietnamese_22k_test.rs  vietnamese_dict_test.rs
core/tests/common/: mod.rs
docs/: install-windows.md  windows-runtime-checklist.md
scripts/setup/: windows.ps1
